--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "@emotion/styled": "11.13.0",
     "@mui/icons-material": "5.16.4",
     "@mui/material": "5.16.4",
-    "@mui/x-date-pickers": "7.11.0",
+    "@mui/x-date-pickers": "^5.0.0-alpha.3",
     "@mui/x-date-pickers-pro": "7.11.0",
     "@reduxjs/toolkit": "2.2.6",
     "apexcharts": "3.51.0",
     "axios": "1.7.2",
     "cors": "^2.8.5",
-    "date-fns": "3.6.0",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.2",
