--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18.0.0",
     "react-redux": "9.1.2",
     "react-router-dom": "6.25.1",
-    "recharts": "2.12.7"
+    "recharts": "2.12.7",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@types/react": "18.2.38",
